# brief-decoder

./: .env.example  .gitignore  AI_USAGE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  main.py  models.py  repository.py  schemas.py  service.py
app/api/: briefs.py  deps.py
app/providers/: __init__.py  base.py  fake.py
extension/: package-lock.json  wxt.config.ts
extension/entrypoints/popup/: App.css  App.tsx  api.ts
tests/: conftest.py  test_api.py  test_validation.py
