[project]
name = "brief-decoder"
version = "0.1.0"
description = ""
authors = [
    {name = "Kan Alexandr",email = "kan.a@delotech.ru"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "fastapi (>=0.139.0,<0.140.0)",
    "uvicorn (>=0.50.0,<0.51.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "pydantic-settings (>=2.14.2,<3.0.0)",
    "sqlalchemy[asyncio] (>=2.0.51,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.1.1,<10.0.0)",
    "pytest-asyncio (>=1.4.0,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "aiosqlite (>=0.22.1,<0.23.0)"
]
